Do not use the user's default browser configuration to open XML files.

BUG: 291177
FIXED-IN: 4.9.0
REVIEW: 105476